Refactor Code: Inventory Manager
